fixed unaligned styling in queue as a result of image radius change

--- a/src/components/main/styles/main-playback/currently-playing-header.css
+++ b/src/components/main/styles/main-playback/currently-playing-header.css
@@ -57,6 +57,7 @@
     justify-content: start;
     gap: 0.1rem;
     padding-bottom: 3px;
+    padding-top: 20px;
 }
 
 .empty-bars__item {
@@ -80,18 +81,19 @@
 
 .main-playback--cur-playing-header-container button {
     position: absolute;
-    top: 13px;
-    left: 235px;
-    width: 90px;
-    height: 40px;
+    top: 15px;
+    left: 260px;
+    width: 80px;
+    height: 35px;
     font-size: 16px;
     line-height: 1;
     border: none;
     justify-self: center;
     align-self: end;
     background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    /* background-image: linear-gradient(144deg,var(--const-blue), var(--const-green) 50%,var(--const-blue)); */
     border-radius: 8px;
-    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    /* box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px; */
     color: var(--const-white);
     justify-content: center;
     cursor: pointer;
@@ -99,15 +101,14 @@
 
 .main-playback--cur-playing-header-container button span {
     background-color: rgb(5, 6, 45);
-    padding: 8px 0;
+    padding: 6px 0;
     border-radius: 6px;
-    width: 86px;
-    height: 36px;
+    width: 76px;
+    height: 31px;
     transition: 300ms;
     place-self: center;
 }
 
 .main-playback--cur-playing-header-container button:hover span {
     background: none;
-    transform: scale(1.2);
 }
