--- a/src/components/main/styles/main-playback/queue.css
+++ b/src/components/main/styles/main-playback/queue.css
@@ -33,7 +33,7 @@
     justify-items: center;
     align-content: center;
     text-align: center;
-    min-height: 150px;
+    min-height: 160px;
     padding: 5px;
     color: var(--const-card-yellow);
 }
@@ -55,7 +55,6 @@
 .main-playback--queue-track {
     font-size: 16px;
     font-weight: bold;
-    margin-top: 5px;
 }
 
 .main-playback--queue-artist {
